--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Sistem Presensi{% endblock %}</title>
+    
+    <!-- TAMBAHKAN FAVICON DI SINI -->
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo.png') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/logo.png') }}">
+    
+    <title>{% block title %}Hadirku - Sistem Presensi{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
@@ -12,8 +17,15 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <!-- Mengarah ke 'main.index' -->
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Presensi Wajah</a>
+            <!-- UBAH BAGIAN INI - TAMBAHKAN LOGO DI NAVBAR -->
+            <a class="navbar-brand d-flex align-items-center" href="{{ url_for('main.index') }}">
+                <img src="{{ url_for('static', filename='img/logo.png') }}" 
+                     alt="Hadirku Logo" 
+                     height="32" 
+                     class="me-2">
+                <span>Hadirku</span>
+            </a>
+            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
