--- a/templates/login.html
+++ b/templates/login.html
@@ -22,10 +22,16 @@
                     </div>
                 </form>
                 <p class="text-center mt-3">
+                    login admin
+                    Nama Lengkap: admin
+                    Password: admin123
+                </p>
+                <p class="text-center mt-3">
                     Belum punya akun? <a href="{{ url_for('auth.signup') }}">Daftar di sini</a>
                 </p>
             </div>
         </div>
     </div>
 </div>
+
 {% endblock %}
